# nes-emu

./: build.gradle  gradle.properties
.github/workflows/: build_apk.yml  generate_android.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/android/: AudioDriver_Android.cpp  Input_Android.cpp  Renderer_Android.cpp  native-lib.cpp
app/src/main/cpp/core/: Cartridge.cpp  Cartridge.h  Cpu.cpp  Nes.cpp  Nes.h  System.cpp
app/src/main/cpp/include/: SDL.h  SDL_events.h  SDL_keyboard.h  SDL_render.h  SDL_scancode.h
app/src/main/java/com/example/nesemu/: MainActivity.kt  NesEmulator.kt
app/src/main/res/drawable/: ic_launcher.xml
app/src/main/res/layout/: activity_main.xml
